fable/test/valid/f90_ne_token.f
      program prog
      if (i /= 1) write(6, *) 'is is not one.'
      end
