fable/test/syntax_error/bad_not.f
      program prog
      logical a, b
      a = .not b
      end
